# routes/index.js
@@ -2,9 +2,9 @@ const express = require('express');
 const router = express.Router();
 
 router.use('/', require('./swagger'));
-router.use('/contacts', require('./contacts'))
+router.use('/plant', require('./plant'))
 router.get('/', (req, res) => {
-    res.send('Welcome to the App, Use /contacts to go to the contact in the url page')
+    res.send('Welcome to the App, Use /plant to go to the contact in the url page')
 })
 
 module.exports = router;
