# swaggerdoc.json
@@ -1,14 +1,14 @@
 {
   "swagger": "2.0",
   "info": {
-    "title": "My API",
-    "description": "Contacts",
+    "title": "Plant API",
+    "description": "Some African Plants",
     "version": "1.0.0"
   },
-  "host": "contact-swagger.onrender.com",
+  "host": "localhost:8080",
   "basePath": "/",
   "schemes": [
-    "https"
+    "http"
   ],
   "paths": {
     "/": {
@@ -29,7 +29,7 @@
         "responses": {}
       }
     },
-    "/contacts/": {
+    "/plant/": {
       "get": {
         "description": "",
         "produces": [
@@ -51,19 +51,28 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "commonName": {
                   "example": "any"
                 },
-                "lastName": {
+                "localName": {
                   "example": "any"
                 },
-                "email": {
+                "family": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "genus": {
                   "example": "any"
                 },
-                "birthday": {
+                "isMedicinal": {
+                  "example": "any"
+                },
+                "flowerColor": {
+                  "example": "any"
+                },
+                "isEdible": {
+                  "example": "any"
+                },
+                "scientificName": {
                   "example": "any"
                 }
               }
@@ -80,7 +89,7 @@
         }
       }
     },
-    "/contacts/{id}": {
+    "/plant/{id}": {
       "get": {
         "description": "",
         "produces": [
@@ -108,6 +117,18 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "commonName": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
@@ -134,19 +155,28 @@
             "schema": {
               "type": "object",
               "properties": {
-                "firstName": {
+                "commonName": {
                   "example": "any"
                 },
-                "lastName": {
+                "localName": {
                   "example": "any"
                 },
-                "email": {
+                "family": {
                   "example": "any"
                 },
-                "favoriteColor": {
+                "genus": {
                   "example": "any"
                 },
-                "birthday": {
+                "isMedicinal": {
+                  "example": "any"
+                },
+                "flowerColor": {
+                  "example": "any"
+                },
+                "isEdible": {
+                  "example": "any"
+                },
+                "scientificName": {
                   "example": "any"
                 }
               }
